# poetry-setting

./: .gitignore  Dockerfile  LICENSE  README.md  default.env  pyproject.toml
app/: main.py
tests/: __init__.py  test_main.py
